--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <header id="main-header">
         <div class="search-container">
             <input id="search-films-input" class="search-bar" type="text" placeholder="search films...">
-            <button id="add-movie-button">
+            <button id="add-movie-page-button">
                 <img src="vectors/plus.svg">
             </button>
         </div>
@@ -65,7 +65,7 @@
     <section id="movie-details-page" class="hide">
         <header>
             <div class="movie-title-container">
-                <div class="flex-container">
+                <div class="flex-container flex-justify-center">
                     <h1 id="movie-details-title">Movie Title</h1>
                     <button id="movie-details-remove-icon" class="button-icon"><img
                             src="vectors/trash-icon.svg" /></button>
@@ -237,7 +237,6 @@
                         </td>
                     </tr>
                 </table>
-
                 <button id="add-movie-button">Add Movie</button>
             </form>
 
@@ -247,8 +246,8 @@
         </div>
     </section>
 
+    <script src="script.js" type="module"></script>
 </body>
-<script src="script.js" type="module"></script>
 <!-- <script src="MultiFieldInput.js" type="module"></script> -->
 
 </html>
