money format fixes

--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
                         </td>
                         <td>
                             <div class="input-multi" id="add-movie-cast">
-                                <input type="text" name="add-movie-cast">
+                                <input type="text" name="add-movie-cast" placeholder="Cast Member">
                             </div>
                         </td>
                     </tr>
@@ -185,7 +185,7 @@
                             <label for="add-movie-duration">Duration</label>
                         </td>
                         <td>
-                            <input type="text" name="add-movie-duration" id="add-movie-duration">
+                            <input type="text" name="add-movie-duration" id="add-movie-duration" placeholder="Minutes">
                         </td>
                     </tr>
 
@@ -195,7 +195,7 @@
                         </td>
                         <td>
                             <div class="input-multi" id="add-movie-genres">
-                                <input type="text" name="add-movie-genres" id="add-movie-genre">
+                                <input type="text" name="add-movie-genres" id="add-movie-genre" placeholder="Genre Name">
                             </div>
                         </td>
                     </tr>
@@ -205,7 +205,7 @@
                             <label for="add-movie-budget">Budget</label>
                         </td>
                         <td>
-                            <input type="text" name="add-movie-budget" id="add-movie-budget">
+                            <input type="text" name="add-movie-budget" id="add-movie-budget" placeholder="$">
                         </td>
                     </tr>
 
@@ -214,7 +214,7 @@
                             <label for="add-movie-box-office">Box Office</label>
                         </td>
                         <td>
-                            <input type="text" name="add-movie-box-office" id="add-movie-box-office">
+                            <input type="text" name="add-movie-box-office" id="add-movie-box-office" placeholder="$">
                         </td>
                     </tr>
 
@@ -224,7 +224,7 @@
                         </td>
                         <td>
                             <div class="input-multi" id="add-movie-countries">
-                                <input type="text" name="add-movie-countries">
+                                <input type="text" name="add-movie-countries" placeholder="Country Name">
                             </div>
                         </td>
                     </tr>
